--- a/util/sample_init_scripts/Makefile.am
+++ b/util/sample_init_scripts/Makefile.am
@@ -1,6 +1,5 @@
 
 docdir = $(datadir)/doc/@PACKAGE@-@VERSION@/sample_init_scripts
+SUBDIRS= hackable rhel
 dist_doc_DATA = \
-ldmsd.conf.example \
-ldmsd.example \
 README
