--- a/baler/configure.ac
+++ b/baler/configure.ac
@@ -72,6 +72,7 @@ AC_CONFIG_FILES([Makefile docs/Makefile src/Makefile
 	scripts/Makefile src/baler/Makefile src/plugins/Makefile
 	src/query/Makefile src/test/Makefile
 	src/bhttpd/Makefile
+	src/bassoc/Makefile
 	src/plugins/test/Makefile swig/Makefile etc/Makefile
 	etc/init.d/Makefile etc/init.d/balerd
 	etc/logrotate.d/Makefile
