--- a/ldms/configure.ac
+++ b/ldms/configure.ac
@@ -65,6 +65,8 @@ OPTION_DEFAULT_DISABLE([ncsa_unified], [ENABLE_NCSA_UNIFIED])
 OPTION_DEFAULT_DISABLE([atasmart], [ENABLE_ATASMART])
 OPTION_DEFAULT_DISABLE([hadoop], [ENABLE_HADOOP])
 OPTION_DEFAULT_ENABLE([generic_sampler], [ENABLE_GENERIC_SAMPLER])
+OPTION_DEFAULT_DISABLE([switchx], [ENABLE_SWITCHX])
+OPTION_WITH([switchx], [SWITCHX])
 
 OPTION_DEFAULT_ENABLE([ldmsd], [ENABLE_LDMSD])
 
