ldmsd: Split configuration into its own file
The ldmsd.c file has gotten too large. Split out the configuration
into its own file to make the code easier to understand and
maintain.

Change-Id: I986dcd437986ae112784aa2832f0dcf0845c5265
Signed-off-by: Tom Tucker <tom@ogc.us>

--- a/ldms/src/ldmsd/Makefile.am
+++ b/ldms/src/ldmsd/Makefile.am
@@ -9,7 +9,7 @@ AM_LDFLAGS = @OVIS_LIB_LIBDIR_FLAG@
 ldms_ls_SOURCES = ldms_ls.c
 ldms_ls_LDADD = $(CORE)/libldms.la -lrt -lovis_util -lpthread
 
-ldmsd_SOURCES = ldmsd.c ldmsd_store.c
+ldmsd_SOURCES = ldmsd.c ldmsd_store.c ldmsd_config.c
 ldmsd_LDADD = $(CORE)/libldms.la
 ldmsd_LDFLAGS = $(AM_LDFLAGS) @EVENTLIBS@ \
 		-levent -lpthread -levent_pthreads -lovis_util -lcoll -ldl
