--- a/ldms/scripts/Makefile.am
+++ b/ldms/scripts/Makefile.am
@@ -15,9 +15,13 @@ bin_SCRIPTS+= ldms_ban.sh
 
 bin_SCRIPTS+=  ldms_ctltest.sh
 
-bin_SCRIPTS+=  \
+bin_SCRIPTS+= \
 ldms_local_rollbytes_test.sh \
 ldms_local_rollperiod_test.sh \
 ldms_local_rollrecords_test.sh \
 ldms_local_rolltime_test.sh
+
+bin_SCRIPTS+= \
+ldms_local_dertest.sh \
+ldms_local_dertest_big.sh
 
