LDMS Version 2 API and SWIG
This changeset refactors the LDMS API to use a more consistent
naming convention as follows:

ldms_ <noun> _ <verb> [_ <type>]

Also, create/destroy have been replaced with new/delete, and
reference counting with _get and _put.

For example ldms_create_set becomes ldms_set_new, and
ldms_destroy_set becomes ldms_set_delete.

The ldms_metric_t and ldms_mvec_t have been deprecated
altogether. All metrics are referred to simply with their
metric index, i.e. their ordinal id in the metric set directory.
This corresponds directly with the order that the metrics
where added to the schema used to create the set

The transport services have been renamed to include the _xprt_
noun so that ldms_connect becomes ldms_xprt_connect, etc...
Also, a synchronous capability has been added so that if a
callback function is not specified, the verbs behave synchronously.
For example, ldms_xprt_lookup(x, 'css/meminfo', NULL, &set)
will wait until the lookup coimpletes and place the resulting set
in the set parameter passed as the argument to the callback.
This capability has been added primarily to support python based
test applications.

A Python interface has been added to the ldms library so that
all ldms API are now accessible from Python applications. See the
./swig/pytest.py application as an example of how to implement
the ldms_ls application in Python.

Most samplers have been refactored to include the
new API. A few exceptions are the luster, ncsa, and Cray specific
samplers.

All stores except msqlbulk have been refactored.

Change-Id: I5a66a618750787657c04294e0d88d78a2c30601e
Signed-off-by: Tom Tucker <tom@ogc.us>

--- a/ldms/configure.ac
+++ b/ldms/configure.ac
@@ -187,10 +187,22 @@ AC_CHECK_LIB(coll, idx_create, [],
 dnl Reset LIBS variable.
 LIBS=""
 
+dnl LDMS Swig
+OPTION_DEFAULT_DISABLE([swig], [ENABLE_SWIG])
+if test -z "$ENABLE_SWIG_TRUE"
+then
+	AM_PATH_PYTHON(2.6)
+	AC_PROG_SWIG
+	SWIG_PYTHON
+	pkgpythondir="${pythondir}/ovis_lib"
+	pkgpyexecdir="${pkgpythondir}"
+fi
+
 AC_SUBST(ac_configure_args)
 AC_SUBST(configure_input)
 
 AC_CONFIG_FILES([Makefile src/Makefile src/core/Makefile
+		 swig/Makefile
 		 src/store/Makefile src/sampler/Makefile
 		 src/sampler/lustre/Makefile
 		 src/sampler/hadoop/Makefile
