--- a/ldms/configure.ac
+++ b/ldms/configure.ac
@@ -47,10 +47,10 @@ OPTION_WITH([me], [ME])
 
 dnl Options for sampler
 OPTION_DEFAULT_ENABLE([sampler], [ENABLE_SAMPLER])
-OPTION_DEFAULT_ENABLE([geminfo], [ENABLE_GEMINFO])
+OPTION_DEFAULT_DISABLE([geminfo], [ENABLE_GEMINFO])
 OPTION_DEFAULT_ENABLE([lustre], [ENABLE_LUSTRE])
 OPTION_DEFAULT_ENABLE([meminfo], [ENABLE_MEMINFO])
-OPTION_DEFAULT_ENABLE([perfevent], [ENABLE_PERFEVENT])
+OPTION_DEFAULT_DISABLE([perfevent], [ENABLE_PERFEVENT])
 OPTION_DEFAULT_ENABLE([procinterrupts], [ENABLE_PROCINTERRUPTS])
 OPTION_DEFAULT_ENABLE([procnetdev], [ENABLE_PROCNETDEV])
 OPTION_DEFAULT_ENABLE([procnfs], [ENABLE_PROCNFS])
