slurm jobid plugin.
This plugin is as much to document the functionality as to be used.
Probably we'll want to extend other plugins to grab jobid and keep
it in their metric sets. The plugin can grab any simple integer file
from any location; it is not wired to slurm specifically.

--- a/ldms/scripts/Makefile.am
+++ b/ldms/scripts/Makefile.am
@@ -14,6 +14,7 @@ CLEANFILES = $(bin_SCRIPTS)
 bin_SCRIPTS+= ldms_ban.sh
 
 bin_SCRIPTS+=  ldms_ctltest.sh
+bin_SCRIPTS+=  ldms_local_slurmtest.sh
 
 bin_SCRIPTS+= \
 ldms_local_rollbytes_test.sh \
