baler: bnumvec - 'stat' operation implementation
Calculate the following statistics of bnumvec:
- min
- First quartile (q1)
- median
- Third Quartile (q3)
- max
- Sum Squared Error (SSE)
- Standard Deveiation (SD)
- median
- Median Absolute Deviation (MAD)
  - also produce Absolute Deviation Vector: INPUT.bmad

Change-Id: I8931038b06376a1470f980e7eb721e0a9277666e

--- a/baler/src/tools/Makefile.am
+++ b/baler/src/tools/Makefile.am
@@ -8,5 +8,5 @@ bcsv2bnumvec_LDADD = ../baler/libbaler.la
 bin_PROGRAMS += bcsv2bnumvec
 
 bnumvec_SOURCES = bnumvec.c
-bnumvec_LDADD = ../baler/libbaler.la -lpthread
+bnumvec_LDADD = ../baler/libbaler.la -lpthread -lm
 bin_PROGRAMS += bnumvec
