--- a/ldms/scripts/ldms_local_procstatutil.sh.in
+++ b/ldms/scripts/ldms_local_procstatutil.sh.in
@@ -32,12 +32,19 @@ case "x$USER" in
 	exit 1
 	;;
 esac
+function mysleep() {
+	echo -n sleep $1 ... 
+	sleep $1
+	echo done
+}
 
 # use our pid in dirname to prevent collisions in dir & file naming
 TESTDIR=/tmp/$USER/ldmstest/$$
 STOREDIR=$TESTDIR/store
 SOCKDIR=$TESTDIR/run/ldmsd
 LOGDIR=$TESTDIR/logs
+#export TSAN_OPTIONS=verbosity=1:log_path=$LOGDIR:strip_path_prefix=$prefix
+#export ASAN_OPTIONS=verbosity=1:log_path=$LOGDIR:detect_stack_use_after_return=1:detect_leaks=1:strip_path_prefix=$prefix
 export LDMSD_SOCKPATH=${TESTDIR}/run
 mkdir -p $STOREDIR $SOCKDIR $LOGDIR $LDMSD_SOCKPATH
 echo "logs and data stored under $TESTDIR"
@@ -49,7 +56,7 @@ export LDMSD_PLUGIN_LIBPATH=@pkglibdir@
 
 # whack the daemons we own
 pkill ldmsd
-sleep 1
+mysleep 1
 echo "Listing ldmsd's still running:"
 pgrep ldmsd
 echo "Done."
@@ -67,44 +74,44 @@ echo Starting daemons
 ldmsd -x sock:$port1 -S $SOCKDIR/metric_socket_1  -l ${LOGDIR}/1.txt -q DEBUG
 ldmsd -x sock:$port2 -S $SOCKDIR/metric_socket_2  -l ${LOGDIR}/2.txt -q DEBUG
 ldmsd -x sock:$port3 -S $SOCKDIR/metric_socket_3  -l ${LOGDIR}/3.txt -q DEBUG
-sleep 1
+mysleep 1
 
 
 echo Starting plugins on daemon1
 echo "load name=procstatutil" | ${BUILDDIR}/sbin/ldmsctl -S $SOCKDIR/metric_socket_1
 echo "config name=procstatutil set=localhost1/procstatutil component_id=1" | ${BUILDDIR}/sbin/ldmsctl -S $SOCKDIR/metric_socket_1
 echo "start name=procstatutil interval=1000000" | ${BUILDDIR}/sbin/ldmsctl -S $SOCKDIR/metric_socket_1
-sleep 1
+mysleep 1
 
 echo Starting plugins on daemon2
 echo "load name=procstatutil2" | ${BUILDDIR}/sbin/ldmsctl -S $SOCKDIR/metric_socket_2
 echo "config name=procstatutil2 set=localhost2/procstatutil2 maxcpu=8 metrics_type=1 component_id=2" | ${BUILDDIR}/sbin/ldmsctl -S $SOCKDIR/metric_socket_2
 echo "start name=procstatutil2 interval=1000000" | ${BUILDDIR}/sbin/ldmsctl -S $SOCKDIR/metric_socket_2
-sleep 2
+mysleep 2
 
 echo Adding host2 to aggregator3
 echo "add host=localhost type=active xprt=sock interval=1000000 port=$port2 sets=localhost2/procstatutil2" | ${BUILDDIR}/sbin/ldmsctl -S $SOCKDIR/metric_socket_3
-sleep 1
+mysleep 1
 echo Adding host1 to aggregator3
 echo "add host=localhost type=active xprt=sock interval=1000000 port=$port1 sets=localhost1/procstatutil" | ${BUILDDIR}/sbin/ldmsctl -S $SOCKDIR/metric_socket_3
 
-sleep 5
+mysleep 5
 echo Adding store_csv to aggregator3
 echo "load name=store_csv" | ${BUILDDIR}/sbin/ldmsctl -S $SOCKDIR/metric_socket_3
-sleep 2
+mysleep 2
 echo "config name=store_csv path=${STOREDIR} altheader=1 id_pos=1" | ${BUILDDIR}/sbin/ldmsctl -S $SOCKDIR/metric_socket_3
 echo "store name=store_csv comp_type=node set=procstatutil container=procstatutil" | ${BUILDDIR}/sbin/ldmsctl -S $SOCKDIR/metric_socket_3
 echo "store name=store_csv comp_type=node set=procstatutil2 container=procstatutil2" | ${BUILDDIR}/sbin/ldmsctl -S $SOCKDIR/metric_socket_3
-sleep 2
+mysleep 2
 #
 
-sleep 5
+mysleep 5
 echo ldms_ls on host 1:
 ldms_ls -h localhost -x sock -p $port1 -l
-sleep 1
+mysleep 1
 echo ldms_ls on host 2:
 ldms_ls -h localhost -x sock -p $port2 -l
-sleep 1
+mysleep 1
 echo ldms_ls on host 3:
 ldms_ls -h localhost -x sock -p $port3 
 
