--- a/configure.ac
+++ b/configure.ac
@@ -67,5 +67,10 @@ util/sample_init_scripts/rhel/etc/Makefile
 util/sample_init_scripts/rhel/etc/init.d/Makefile
 util/sample_init_scripts/rhel/etc/ldms/Makefile
 util/sample_init_scripts/rhel/etc/sysconfig/Makefile
+util/sample_init_scripts/genders/Makefile
+util/sample_init_scripts/genders/etc/sysconfig/Makefile
+util/sample_init_scripts/genders/etc/Makefile
+util/sample_init_scripts/genders/etc/init.d/Makefile
+
 packaging/ovis-base.spec])
 AC_OUTPUT
