--- a/util/sample_init_scripts/Makefile.am
+++ b/util/sample_init_scripts/Makefile.am
@@ -1,5 +1,5 @@
 
 docdir = $(datadir)/doc/@PACKAGE@-@VERSION@/sample_init_scripts
-SUBDIRS= hackable rhel
+SUBDIRS= hackable rhel genders
 dist_doc_DATA = \
 README
