gender test packaging

--- a/packaging/ovis-base.spec.in
+++ b/packaging/ovis-base.spec.in
@@ -12,13 +12,13 @@
 Summary: OVIS LDMS Commands and Libraries
 Name: ldms-all
 Version: @VERSION@
-Release: ovis1%{?dist}
+Release: ovis1genders%{?dist}
 License: GPLv2 or BSD
 Group: %{ldms_all}
 BuildRoot: %{_tmppath}/%{name}-%{version}-%{release}-root-%(%{__id_u} -n)
 Source: %{name}-%{version}.tar.gz
 Requires: rpm >= 4.8.0 ovis-libevent2
-BuildRequires: doxygen openssl-devel libibverbs-devel librdmacm-devel gcc46 ovis-libevent2-devel glib2-devel libibmad-devel
+BuildRequires: doxygen openssl-devel libibverbs-devel librdmacm-devel  ovis-libevent2-devel glib2-devel libibmad-devel
 Url: http://ovis.ca.sandia.gov/
 
 Prefix: /usr
@@ -93,6 +93,8 @@ Doxygen files for ldms-all package.
 %{_datadir}/doc/%{name}-%{version}
 %docdir %{_defaultdocdir}
 %changelog
+* Thu Apr 23 2015 Ben Allan <baallan@sandia.gov> 2.4.1-2-genders
+packaging of alpha genders build
 * Thu Apr 23 2015 Ben Allan <baallan@sandia.gov> 2.4.1-1
 packaging with sysclassib and procstatutil2 enabled.
 * Wed Feb 18 2015 Ben Allan <baallan@sandia.gov> 2.4.0-1
