ldms: swig: Change the installed directory of ldms python module
Change the directory from ovis_lib to ovis_ldms. Now the ldms module is in the
ovis_ldms package.

Change-Id: I1f65a2cbc4462ac28db9d71a095b19a058f2109d

--- a/ldms/configure.ac
+++ b/ldms/configure.ac
@@ -194,7 +194,7 @@ then
 	AM_PATH_PYTHON(2.6)
 	AC_PROG_SWIG
 	SWIG_PYTHON
-	pkgpythondir="${pythondir}/ovis_lib"
+	pkgpythondir="${pythondir}/ovis_ldms"
 	pkgpyexecdir="${pkgpythondir}"
 fi
 
