added -r pidfilename option to ldmsd.
gets pgrep ambiguity out of daemon business.
MAN: updated man page for -r option on ldmsd.
The path is from -r, then the env var LDSMD_PIDFILE, then the default
system dir.

--- a/ldms/scripts/ldms_local_clocktest.sh.in
+++ b/ldms/scripts/ldms_local_clocktest.sh.in
@@ -43,6 +43,7 @@ TESTDIR=/tmp/$USER/ldmstest/$$
 STOREDIR=$TESTDIR/store
 SOCKDIR=$TESTDIR/run/ldmsd
 LOGDIR=$TESTDIR/logs
+#export LDMSD_PIDFILE=$TESTDIR/run/ldmsd.pid
 export TSAN_OPTIONS=verbosity=1:log_path=$LOGDIR:strip_path_prefix=$prefix
 export ASAN_OPTIONS=verbosity=1:log_path=$LOGDIR:detect_stack_use_after_return=1:detect_leaks=1:strip_path_prefix=$prefix
 export LDMSD_SOCKPATH=${TESTDIR}/run
@@ -71,9 +72,9 @@ rm -rf ${STOREDIR}/node
 rm -f ${STOREDIR}/*
 
 echo Starting daemons
-ldmsd -x sock:$port1 -S $SOCKDIR/metric_socket_1  -l ${LOGDIR}/1.txt
-ldmsd -x sock:$port2 -S $SOCKDIR/metric_socket_2  -l ${LOGDIR}/2.txt
-ldmsd -x sock:$port3 -S $SOCKDIR/metric_socket_3  -l ${LOGDIR}/3.txt
+ldmsd -x sock:$port1 -S $SOCKDIR/metric_socket_1  -l ${LOGDIR}/1.txt -r $TESTDIR/run/ldmsd.pid.1
+ldmsd -x sock:$port2 -S $SOCKDIR/metric_socket_2  -l ${LOGDIR}/2.txt -r $TESTDIR/run/ldmsd.pid.2
+ldmsd -x sock:$port3 -S $SOCKDIR/metric_socket_3  -l ${LOGDIR}/3.txt -r $TESTDIR/run/ldmsd.pid.3
 mysleep 1
 
 
