--- a/ldms/scripts/ldms_local_rollrecords_test.sh.in
+++ b/ldms/scripts/ldms_local_rollrecords_test.sh.in
@@ -42,6 +42,7 @@ function mysleep() {
 TESTDIR=/tmp/$USER/ldmstest/$$
 STOREDIR=$TESTDIR/store
 SOCKDIR=$TESTDIR/run/ldmsd
+export LDMSD_PIDFILE=$TESTDIR/run/ldmsd.pid
 LOGDIR=$TESTDIR/logs
 export TSAN_OPTIONS=verbosity=1:log_path=$LOGDIR:strip_path_prefix=$prefix
 export ASAN_OPTIONS=verbosity=1:log_path=$LOGDIR:detect_stack_use_after_return=1:detect_leaks=1:strip_path_prefix=$prefix
