--- a/ldms/scripts/ldms_local_slurmtest.sh.in
+++ b/ldms/scripts/ldms_local_slurmtest.sh.in
@@ -45,6 +45,7 @@ SOCKDIR=$TESTDIR/run/ldmsd
 SLURMFILE=$TESTDIR/run/ldms.slurm.jobid
 SLURMCOL=slurm.jobid
 LOGDIR=$TESTDIR/logs
+export LDMSD_PIDFILE=$TESTDIR/run/ldmsd.pid
 export TSAN_OPTIONS=verbosity=1:log_path=$LOGDIR:strip_path_prefix=$prefix
 export ASAN_OPTIONS=verbosity=1:log_path=$LOGDIR:detect_stack_use_after_return=1:detect_leaks=1:strip_path_prefix=$prefix
 export LDMSD_SOCKPATH=${TESTDIR}/run
