--- a/util/sample_init_scripts/genders/etc/sysconfig/ldms-aggd.conf
+++ b/util/sample_init_scripts/genders/etc/sysconfig/ldms-aggd.conf
@@ -9,8 +9,8 @@
 . /etc/sysconfig/ldmsd
 
 # TESTING should be true or false
-#TESTING=/bin/false
-TESTING=/bin/true
+TESTING=/bin/false
+#TESTING=/bin/true
 if $TESTING; then
 	host=ataco-login4
 else
@@ -28,11 +28,11 @@ LDMSAGGD=
 
 # make all daemons log at the same level; gender control is finer grained.
 # overrides gender: ldmsaggd_dbg
-LDMSAGGD_LOG_LEVEL=
+AGG_DEBUG=DEBUG
 
 # protocol plugin to use for getting data from aggregators
 # overrides gender: ldmsaggd_xprt
-AGG_LDMSD_TRANSPORT=sock
+AGG_LDMSD_TRANSPORT=
 
 # Port to use for all aggregators instead of gender or 411 default
 # overrides gender: ldmsaggd_port
@@ -47,14 +47,12 @@ AGG_COLLECTION_INTERVAL=
 # overrides gender: ldmsaggd_offset_default
 AGG_COLLECTION_OFFSET=
 
-# daemon log verbosity
-# overrides gender: ldmsaggd_dbg
-AGG_DEBUG=
-
 # store plugins to load, separated by :. Whitespace illegal.
 # e.g. store_csv:store_derived_csv
 # overrides gender: ldmsaggd_stores
 STORES=
+
+STORE_PATH=/tmp/ldmsdata
 
 # store specialized plugin config args
 # overrides genders: ldmsaggd_SUFFIX where SUFFIX is the store plugin name.
