--- a/util/sample_init_scripts/genders/etc/sysconfig/ldmsd.conf
+++ b/util/sample_init_scripts/genders/etc/sysconfig/ldmsd.conf
@@ -8,14 +8,16 @@
 
 # Normally NODEATTRFILE should be empty, else '-f <pathtofile>'
 NODEATTRFILE=
-NODEATTRFILE="-f /home/baallan/ovis/init-2015/genders.ataco.new"
+NODEATTRFILE="-f /etc/genders.ldms"
 
+USER=root
+export USER
 # set DEBUG_INITD empty to turn off script debugging
 DEBUG_INITD=/bin/true
 
 # TESTING should be true or false
-#TESTING=/bin/false
-TESTING=/bin/true
+TESTING=/bin/false
+#TESTING=/bin/true
 if $TESTING; then
 	host=atacoadmin1
 else
@@ -28,12 +30,10 @@ PLATNAME=
 if test -z "$PLATNAME"; then
 	PLATNAME=`nodeattr $NODEATTRFILE -v $host cluster`
 fi
-if $DEBUG_INITD; then
-	echo platform is $PLATNAME
-fi
+echoq platform is $PLATNAME
 
 # a bit of local sandia hackery for testing non-image ldmsd installs
-BUILDTYPE="experimental"
+BUILDTYPE="toss"
 case $BUILDTYPE in
 experimental)
 	prefix="/home/baallan/ovis/repos/ovispublic/LDMS_install"
@@ -51,6 +51,7 @@ experimental)
 	sysconfdir="/etc"
 	localstatedir="/var"
 	libdir="/usr/lib64"
+	libevent2_libdir=$libdir/ovis-libevent2/lib64/
 ;;
 esac
 export LD_LIBRARY_PATH=$libdir:$libevent2_libdir:$LD_LIBRARY_PATH
@@ -67,9 +68,9 @@ LDMSD=
 # or empty if not
 LDMS_RDMAV_FORK_SAFE=1
 
-# where to send logs. if filesystem, must be mounted everywhere.
+# where to send logs. if filesystem, must be directory existing everywhere.
+# default if empty is to use syslog instead.
 LDMSD_LOG_PATH=
-LDMSD_LOG_PATH=/tmp/ldms_logs
 
 # make all daemons log at the same level; gender control is finer grained.
 # overrides gender: ldmsd_dbg
