ldmsd: ldmsd supports remote configuration for testing purpose.
To use this feature, build ldms with --enable-ldmsd-test option.

To let ldmsd configured remotely, a listener port must be given. The
command-line option is '-r'. If the option is not given, ldmsd will listen
only on the unix domain socket.

Change-Id: I08ea20b961faada06a938f7ecda6fcd1d0b8873d

--- a/ldms/configure.ac
+++ b/ldms/configure.ac
@@ -89,6 +89,8 @@ OPTION_WITH([libevent], [LIBEVENT])
 OPTION_DEFAULT_DISABLE([ocm], [ENABLE_OCM])
 OPTION_WITH([ocm], [OCM])
 
+OPTION_DEFAULT_DISABLE([ldmsd-test], [ENABLE_LDMSD_TEST])
+
 if test -z "$ENABLE_MYSQL_TRUE"
 then
 OPTION_WITH_MYSQL dnl MYSQL is special.
