added the sequence option (default reverse) to csv
updated csv and derived csv to document column ordering.
derived_csv does not have or need the sequence option.
included test script for sequence option to csv.

--- a/ldms/scripts/Makefile.am
+++ b/ldms/scripts/Makefile.am
@@ -16,6 +16,7 @@ bin_SCRIPTS+= ldms_ban.sh
 
 bin_SCRIPTS+=  ldms_ctltest.sh
 bin_SCRIPTS+=  ldms_local_slurmtest.sh
+bin_SCRIPTS+=  ldms_local_csvorder.sh
 
 bin_SCRIPTS+= \
 ldms_local_rollbytes_test.sh \
@@ -30,3 +31,4 @@ ldms_local_dertest_big.sh
 bin_SCRIPTS += ldms_local_procstatutil.sh
 
 bin_SCRIPTS += ldms_local_syslog.sh
+
