ocm: ovis_rctrl: Remote control library
This library is an enhance version of ovis_ctrl library. It uses zap as the
underlying transport library. Also it uses ocm for sending data protocal.

To use the library, include ovis_rctrl/rctrl.h and link to -lovis_rctrl.

Change-Id: I85387b21736df81e0c6ad8db43e1549e47f5fa6f

--- a/ocm/src/Makefile.am
+++ b/ocm/src/Makefile.am
@@ -7,6 +7,10 @@ AM_LDFLAGS = @OVIS_LIB_LIBDIR_FLAG@ @EVENTLIBS@ -lpthread -lzap \
 libocm_la_SOURCES = ocm.c
 lib_LTLIBRARIES = libocm.la
 
+if ENABLE_OVIS_RCTRL
+SUBDIRS += ovis_rctrl
+endif
+
 if ENABLE_OCMD
 ocmd_SOURCES = ocmd.c
 ocmd_LDADD = libocm.la -ldl -lovis_util
