ldmsd: ldmsd supports remote configuration via ldmsd_rctl
 - The feature uses the ovis_rctrl library implemented in ocm to receive
   commands and reply back. To enable this feature, build ldms with the
   --enable-ldmsd-rctrl option.
 - The ldmsd_rctl program is a program similar to ldmsctl but it can send
   commands to a remote ldmsd process using socket given the ldmsd's hostname
   and port, specified with the -p option when starting the ldmsd process.

Change-Id: Iad5733429a03f6dc33ed0ee2f3956c35d4549fb7

--- a/ldms/configure.ac
+++ b/ldms/configure.ac
@@ -90,6 +90,7 @@ OPTION_DEFAULT_DISABLE([ocm], [ENABLE_OCM])
 OPTION_WITH([ocm], [OCM])
 
 OPTION_DEFAULT_DISABLE([ldmsd-test], [ENABLE_LDMSD_TEST])
+OPTION_DEFAULT_DISABLE([ldmsd-rctrl], [ENABLE_LDMSD_RCTRL])
 
 if test -z "$ENABLE_MYSQL_TRUE"
 then
