lib: ovis_auth: OVIS Authentication library
The library provides APIs for creating, packing and unpacking a challenge. It
also provides APIs for reading a secret word from a given file and encrypting it
to create a password.

To build the library, build ovis lib with the --enable-ovis_auth option.

Change-Id: I0d353f6b4cb49a8dcb7c5b738824a79fb5c3323a

--- a/lib/src/Makefile.am
+++ b/lib/src/Makefile.am
@@ -1,6 +1,6 @@
 nobase_include_HEADERS = ovis-test/test.h
 
-SUBDIRS = 
+SUBDIRS =
 
 if ENABLE_COLL
 SUBDIRS += coll
@@ -16,6 +16,10 @@ endif
 
 if ENABLE_OVIS_UTIL
 SUBDIRS += ovis_util
+endif
+
+if ENABLE_OVIS_AUTH
+SUBDIRS += ovis_auth
 endif
 
 if ENABLE_ZAP
